fix: fixing bugs in thread tree on smaller displays
Fixes #60

--- a/assets/css/message-header.scss
+++ b/assets/css/message-header.scss
@@ -2,6 +2,7 @@
 
 .cf-message-header {
   line-height: 1.6em;
+  white-space: nowrap;
 
   h2,
   h3 {
